--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -327,4 +327,14 @@ footer {
         text-align: center;
         padding: 0 20px;
     }
+
+    #photos {
+        column-count: 3;
+    }
+}
+
+@media screen (max-width: 800ox) {
+    #photos {
+        column-count: 2;
+    }
 }
